--- a/client/package.json
+++ b/client/package.json
@@ -12,10 +12,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "lucide-vue-next": "^0.542.0",
     "vue": "^3.5.18"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^6.0.1",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.13",
     "vite": "^7.0.6",
     "vite-plugin-vue-devtools": "^8.0.0"
   }
