--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,53 @@
+# services:
+#   server:
+#     build: ./server
+#     ports:
+#       - "3000:3000"
+#     environment:
+#       - NODE_ENV=development
+#       - PORT=3000
+#       - CORS_ORIGIN=http://localhost:5173
+#       - MONGODB_URI=mongodb://mongo:27017/myapp?directConnection=true
+#     volumes:
+#       - ./server:/app
+#       - server_node_modules:/app/node_modules  # ← named volume で保持
+#     depends_on:
+#       - mongo
+#     command: >
+#       sh -lc "if [ ! -d node_modules ] || [ -z \"$(ls -A node_modules 2>/dev/null)\" ];
+#               then echo '📦 Installing deps...' && npm ci || npm install;
+#               fi;
+#               npm run dev"
+
+#   mongo:
+#     image: mongo:7
+#     restart: unless-stopped
+#     ports:
+#       - "27017:27017"
+#     volumes:
+#       - mongo-data:/data/db
+
+#   client:
+#     build: ./client
+#     ports:
+#       - "5173:5173"
+#     environment:
+#       VITE_API_BASE_URL: http://server:3000
+#     volumes:
+#       - ./client:/app
+#       - client_node_modules:/app/node_modules   # ← 同じ考え方
+#     depends_on:
+#       - server
+#     command: >
+#       sh -lc "if [ ! -d node_modules ] || [ -z \"$(ls -A node_modules 2>/dev/null)\" ];
+#               then echo '📦 Installing deps...' && npm ci || npm install;
+#               fi;
+#               npm run dev -- --host"
+
+# volumes:
+#   mongo-data:
+#   server_node_modules:
+#   client_node_modules:
 services:
   server:
     build: ./server
@@ -10,12 +60,13 @@ services:
       - MONGODB_URI=mongodb://mongo:27017/myapp?directConnection=true
     volumes:
       - ./server:/app
-      - server_node_modules:/app/node_modules  # ← named volume で保持
+      - server_node_modules:/app/node_modules
     depends_on:
-      - mongo
+      mongo:
+        condition: service_healthy         # ← DBが健康になるまで待つ
     command: >
       sh -lc "if [ ! -d node_modules ] || [ -z \"$(ls -A node_modules 2>/dev/null)\" ];
-              then echo '📦 Installing deps...' && npm ci || npm install;
+              then echo '📦 Installing deps...' && (npm ci || npm install);
               fi;
               npm run dev"
 
@@ -26,6 +77,23 @@ services:
       - "27017:27017"
     volumes:
       - mongo-data:/data/db
+    healthcheck:                           # ← これで depends_on: healthy が効く
+      test: ["CMD-SHELL", "echo 'db.runCommand({ ping: 1 }).ok' | mongosh --quiet mongodb://localhost:27017/test | grep 1"]
+      interval: 5s
+      timeout: 3s
+      retries: 20
+
+  mongo-express:                           # ← 追加
+    image: mongo-express:1.0.2-20
+    restart: unless-stopped
+    ports:
+      - "8081:8081"
+    environment:
+      ME_CONFIG_MONGODB_URL: mongodb://mongo:27017   # URL直指定が安定
+      ME_CONFIG_BASICAUTH: "false"                   # 認証なし（開発用）
+    depends_on:
+      mongo:
+        condition: service_healthy
 
   client:
     build: ./client
@@ -35,12 +103,12 @@ services:
       VITE_API_BASE_URL: http://server:3000
     volumes:
       - ./client:/app
-      - client_node_modules:/app/node_modules   # ← 同じ考え方
+      - client_node_modules:/app/node_modules
     depends_on:
       - server
     command: >
       sh -lc "if [ ! -d node_modules ] || [ -z \"$(ls -A node_modules 2>/dev/null)\" ];
-              then echo '📦 Installing deps...' && npm ci || npm install;
+              then echo '📦 Installing deps...' && (npm ci || npm install);
               fi;
               npm run dev -- --host"
 
